feat: Delete advanced features and clean up codes once again