@@ -7,23 +7,19 @@ import com.github.jimtrung.theater.model.Showtime;
 import com.github.jimtrung.theater.model.Auditorium;
 import com.github.jimtrung.theater.model.Ticket;
 import com.github.jimtrung.theater.service.AuditoriumService;
-import com.github.jimtrung.theater.service.AuthService;
 import com.github.jimtrung.theater.service.MovieService;
 import com.github.jimtrung.theater.service.ShowtimeService;
 import com.github.jimtrung.theater.service.TicketService;
-import com.github.jimtrung.theater.util.AuthTokenUtil;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.geometry.Pos;
-import javafx.scene.control.Alert;
+import com.github.jimtrung.theater.util.AlertHelper;
 import javafx.scene.control.CheckBox;
 import javafx.scene.control.Label;
 import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.VBox;
-import javafx.scene.layout.Priority;
-import javafx.scene.layout.Region;
+import javafx.scene.layout.*;
+
 import java.io.InputStream;
 
 import java.util.*;
@@ -32,44 +28,26 @@ import java.util.stream.Collectors;
 
 public class BookedTicketController {
     private ScreenController screenController;
-    private AuthTokenUtil authTokenUtil;
-    private AuthService authService;
-
-    @FXML
-    private UserHeaderController userHeaderController;
-
-    @FXML
-    private CheckBox selectAllCheckBox;
-
-    @FXML
-    private javafx.scene.layout.FlowPane ticketListContainer;
-    
     private TicketService ticketService;
     private ShowtimeService showtimeService;
     private MovieService movieService;
     private AuditoriumService auditoriumService;
     
-    private Map<UUID, CheckBox> checkBoxes = new HashMap<>();
-    private List<Ticket> loadedTickets = new ArrayList<>();
-
     public void setScreenController(ScreenController screenController) {
         this.screenController = screenController;
         if (userHeaderController != null) userHeaderController.setScreenController(screenController);
     }
-
-    public void setAuthTokenUtil(AuthTokenUtil authTokenUtil) {
-        this.authTokenUtil = authTokenUtil;
-    }
-
-    public void setAuthService(AuthService authService) {
-        this.authService = authService;
-        if (userHeaderController != null) userHeaderController.setAuthService(authService);
-    }
-
     public void setTicketService(TicketService s) { this.ticketService = s; }
     public void setShowtimeService(ShowtimeService s) { this.showtimeService = s; }
     public void setMovieService(MovieService s) { this.movieService = s; }
     public void setAuditoriumService(AuditoriumService s) { this.auditoriumService = s; }
+
+    private final Map<UUID, CheckBox> checkBoxes = new HashMap<>();
+    private final List<Ticket> loadedTickets = new ArrayList<>();
+
+    @FXML private UserHeaderController userHeaderController;
+    @FXML private CheckBox selectAllCheckBox;
+    @FXML private FlowPane ticketListContainer;
 
     public void handleOnOpen() {
         if (userHeaderController != null) userHeaderController.handleOnOpen();
@@ -82,24 +60,23 @@ public class BookedTicketController {
         loadedTickets.clear();
         if (selectAllCheckBox != null) selectAllCheckBox.setSelected(false);
         
+        // Chạy async để fetch data chạy trong background giúp UI không bị đơ 
+        // NOTE: Chỉ dùng cho trang này vì trang này cần lấy nhiều dữ liệu
         CompletableFuture.runAsync(() -> {
             try {
                 List<Ticket> tickets = ticketService.getUserTickets();
-                // User requirement: "act like a cart... tick the ticket we want to pay".
-                // So likely show PENDING.
                 List<Ticket> pending = tickets.stream()
                         .filter(t -> "PENDING".equals(t.getStatus()))
-                        .collect(Collectors.toList());
+                        .toList();
                         
                 loadedTickets.addAll(pending);
                 
-                // Group by Showtime to fetch details efficiently
+                // Lấy showtimes và movies
                 Set<UUID> showtimeIds = pending.stream().map(Ticket::getShowtimeId).collect(Collectors.toSet());
                 Map<UUID, Showtime> showtimes = new HashMap<>();
                 Map<UUID, Movie> movies = new HashMap<>();
                 
                 for (UUID sid : showtimeIds) {
-                    // This is not efficient (N+1), but simple for now
                      Showtime st = showtimeService.getAllShowtimes().stream().filter(s -> s.getId().equals(sid)).findFirst().orElse(null);
                      if (st != null) {
                          showtimes.put(sid, st);
@@ -109,7 +86,7 @@ public class BookedTicketController {
                      }
                 }
                 
-                // Fetch Auditoriums and Seats
+                // Lấy auditoriums và seats
                 Map<UUID, Auditorium> auditoriums = new HashMap<>();
                 Map<UUID, Seat> seatMap = new HashMap<>();
                 
@@ -140,7 +117,6 @@ public class BookedTicketController {
                     for (Ticket t : pending) {
                         HBox row = new HBox(10);
                         row.setAlignment(Pos.CENTER_LEFT);
-                        // Dark background style, compact width
                         row.setPrefWidth(320);
                         row.setMaxWidth(320);
                         row.setStyle("-fx-background-color: #2c3e50; -fx-background-radius: 8; -fx-border-radius: 8; -fx-padding: 10; -fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.3), 3, 0, 0, 0);");
@@ -154,7 +130,6 @@ public class BookedTicketController {
                         Auditorium au = st != null ? auditoriums.get(st.getAuditoriumId()) : null;
                         Seat seat = seatMap.get(t.getSeatId());
 
-                        // Image - Smaller
                         ImageView poster = new ImageView();
                         poster.setFitWidth(60);
                         poster.setFitHeight(90);
@@ -170,18 +145,17 @@ public class BookedTicketController {
                              }
                         }
 
-                        // Info VBox - Compact
-                        VBox infoBox = new VBox(2); // Tighter spacing
+                        VBox infoBox = new VBox(2);
                         infoBox.setAlignment(Pos.CENTER_LEFT);
-                        HBox.setHgrow(infoBox, Priority.ALWAYS); // Ensure text wraps or fills
+                        HBox.setHgrow(infoBox, Priority.ALWAYS); 
                         
                         Label lblMovie = new Label(mv != null ? mv.getName() : "Unknown Movie");
                         lblMovie.setWrapText(true);
                         lblMovie.setMaxWidth(200);
-                        lblMovie.setStyle("-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #ecf0f1;"); // Smaller Header
+                        lblMovie.setStyle("-fx-font-size: 14px; -fx-font-weight: bold; -fx-text-fill: #ecf0f1;"); 
                         
                         Label lblDate = new Label(st != null ? "Ngày: " + st.getStartTime().toLocalDate() + " | Giờ: " + st.getStartTime().toLocalTime() : "");
-                        lblDate.setStyle("-fx-font-size: 12px; -fx-text-fill: #bdc3c7;"); // Compact text
+                        lblDate.setStyle("-fx-font-size: 12px; -fx-text-fill: #bdc3c7;"); 
                         
                         String seatInfo = seat != null ? (seat.getRow() + seat.getNumber()) : "Unknown";
                         Label lblSeat = new Label("Phòng: " + (au != null ? au.getName() : "Unknown") + " | Ghế: " + seatInfo);
@@ -221,37 +195,26 @@ public class BookedTicketController {
         }
         
         if (selected.isEmpty()) {
-            Alert alert = new Alert(Alert.AlertType.WARNING);
-            alert.setContentText("Vui lòng chọn vé để thanh toán!");
-            alert.showAndWait();
+            AlertHelper.showWarning("Cảnh báo", "Vui lòng chọn vé để thanh toán!");
             return;
         }
 
-        // Logic check: Allow paying for MULTIPLE showtimes? The PayPage is designed for ONE.
-        // For now, take first ticket's showtime details.
-        
-        Ticket first = selected.get(0);
-        
-        // This part is tricky because PayPage expects "cart" map with all details.
-        // I need to fetch details again or cache them.
+        Ticket first = selected.getFirst();
         
         CompletableFuture.runAsync(() -> {
              try {
-                // Fetch details for the first ticket to populate PayPage header
-                // Note: If user selects multiple movies, PayPage will show info of the first one but total price of all.
                 Showtime st = showtimeService.getAllShowtimes().stream().filter(s -> s.getId().equals(first.getShowtimeId())).findFirst().orElse(null);
                 Movie mv = st != null ? movieService.getMovieById(st.getMovieId()) : null;
                 Auditorium au = st != null ? auditoriumService.getAuditoriumById(st.getAuditoriumId()) : null;
                 
                 Platform.runLater(() -> {
                     Map<String, Object> cart = new HashMap<>();
-                    cart.put("showtimeId", first.getShowtimeId()); // Uses first showtime ID
+                    cart.put("showtimeId", first.getShowtimeId());
                     cart.put("movieName", mv != null ? mv.getName() : "Nhiều phim");
                     cart.put("auditoriumName", au != null ? au.getName() : "...");
                     cart.put("startTime", st != null ? st.getStartTime().toLocalTime() : "");
                     cart.put("endTime", st != null ? st.getEndTime().toLocalTime() : "");
                     cart.put("date", st != null ? st.getStartTime().toLocalDate() : "");
-                    
                     cart.put("seatNames", "Đã chọn " + selected.size() + " vé");
                     
                     List<UUID> ticketIds = selected.stream().map(Ticket::getId).collect(Collectors.toList());
@@ -269,9 +232,6 @@ public class BookedTicketController {
 
     @FXML
     private void handleDelete() {
-        // Not implemented yet
-        Alert alert = new Alert(Alert.AlertType.INFORMATION);
-        alert.setContentText("Tính năng xóa vé chưa được hỗ trợ.");
-        alert.showAndWait();
+        AlertHelper.showInfo("Thông báo", "Tính năng xóa vé chưa được hỗ trợ.");
     }
 }
